--- a/css/viewer.css
+++ b/css/viewer.css
@@ -172,6 +172,9 @@
   z-index: 5;
   width: 30px;
   height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .vw-dot-ring {
